# Stacer

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  build.sh  clean.sh  release.sh
.github/workflows/: build.yml
debian/: changelog
desktop/: stacer.desktop  stacer.metainfo.xml.in
rpm/SPECS/: stacer.spec
stacer/: CMakeLists.txt  main.cpp  utilities.h
stacer-core/Info/: cpu_info.cpp  cpu_info.h  system_info.cpp  system_info.h
stacer-core/Tools/: apt_source_tool.cpp  apt_source_tool.h
stacer/Managers/: app_manager.cpp  tool_manager.cpp  tool_manager.h
stacer/Pages/AptSourceManager/: apt_source_edit.cpp  apt_source_edit.ui  apt_source_manager_page.cpp
stacer/Pages/Settings/: settings_page.cpp  settings_page.ui
stacer/Pages/StartupApps/: startup_app.h  startup_app_edit.cpp  startup_app_edit.h  startup_app_edit.ui
stacer/Pages/SystemCleaner/: system_cleaner_page.cpp
stacer/Pages/Uninstaller/: uninstallerpage.ui
translations/: stacer_ar.ts  stacer_ca.ts  stacer_cs.ts  stacer_de.ts  stacer_en.ts  stacer_es.ts  stacer_eu.ts  stacer_fr.ts  stacer_gl.ts  stacer_hi.ts  stacer_hu.ts  stacer_it.ts  stacer_kn.ts  stacer_ko.ts  stacer_ml.ts  stacer_nl.ts  stacer_oc.ts  stacer_pl.ts  stacer_pt.ts  stacer_ro.ts  stacer_ru.ts  stacer_sv.ts  stacer_tr.ts  stacer_ua.ts  stacer_vn.ts  stacer_zh-cn.ts  stacer_zh-tw.ts
